[tool.poetry]
name = "teletalk-template"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

lessmore-utils = { git = "https://github.com/engineering-friends/lessmore.git", subdirectory = "source/python/libs/lessmore.utils" } # could put in the dependency of the discord-to-telegram-forwarder, but it will soon be obsolete
teletalk = { git = "https://github.com/engineering-friends/lessmore.git", subdirectory = "source/python/libs/teletalk" } # could put in the dependency of the discord-to-telegram-forwarder, but it will soon be obsolete

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
