[tool.poetry]
name = "teletalk-template"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

lessmore-utils = { git = "https://github.com/engineering-friends/lessmore.git", subdirectory = "source/python/libs/lessmore.utils" }
teletalk = { git = "https://github.com/engineering-friends/lessmore.git", subdirectory = "source/python/libs/teletalk" }
aiogram = ">=3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
